# COP3530Final

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  imgui.ini
include/: Application.hpp  BVH.h  Camera.hpp  DemonstrationRenderer.hpp  Mesh.hpp  RayTests.h  Shader.hpp  VAO.hpp  VBO.hpp  ViewProjection.hpp
lib/glad/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeLists.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  glad.sln
lib/glad/src/: CMakeLists.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  glad.c  glad.vcxproj  glad.vcxproj.filters
lib/glfw/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  GLFW.sln  INSTALL.vcxproj  INSTALL.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  cmake_uninstall.cmake  uninstall.vcxproj  uninstall.vcxproj.filters
lib/glfw/examples/: INSTALL.vcxproj  INSTALL.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  boing.vcxproj  boing.vcxproj.filters  gears.vcxproj  gears.vcxproj.filters  heightmap.vcxproj  heightmap.vcxproj.filters  offscreen.vcxproj  offscreen.vcxproj.filters  particles.vcxproj  particles.vcxproj.filters  sharing.vcxproj  sharing.vcxproj.filters  simple.vcxproj  simple.vcxproj.filters  splitview.vcxproj  splitview.vcxproj.filters  wave.vcxproj  wave.vcxproj.filters
lib/glfw/src/: INSTALL.vcxproj  INSTALL.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  glfw.vcxproj  glfw.vcxproj.filters  glfw3.pc  update_mappings.vcxproj  update_mappings.vcxproj.filters
lib/glfw/tests/: INSTALL.vcxproj  INSTALL.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  clipboard.vcxproj  clipboard.vcxproj.filters  cursor.vcxproj  cursor.vcxproj.filters  empty.vcxproj  empty.vcxproj.filters  events.vcxproj  events.vcxproj.filters  gamma.vcxproj  gamma.vcxproj.filters  glfwinfo.vcxproj  glfwinfo.vcxproj.filters  icon.vcxproj  icon.vcxproj.filters  iconify.vcxproj  iconify.vcxproj.filters  inputlag.vcxproj  monitors.vcxproj  (+22 more)
res/: debug.frag  debug.vert  fish.mtl  ladder.mtl  shader.frag  shader.vert  traffic_cone.mtl
src/: Application.cpp  BVH.cpp  CMakeLists.txt  Camera.cpp  DemonstrationRenderer.cpp  Mesh.cpp  Shader.cpp  VAO.cpp  VBO.cpp  main.cpp
(+1 files in other folders)
